--- a/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ValidationErrorBaseTemplate.xaml" />
@@ -82,7 +82,7 @@
                                               common:FrameworkElementBaseAttached.IconHeight="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight}"
                                               common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}"
                                               Effect="{x:Null}"
-                                              Visibility="{TemplateBinding pc:PasswordBoxAssistant.IsShowIcon, Converter={toolkit:BooleanToVisibilityConverter}}"
+                                              Visibility="{TemplateBinding pc:PasswordBoxAssistant.IsShowIcon, Converter={pt:BooleanToVisibilityConverter}}"
                                               Style="{StaticResource ToggleButtonTransparentIconStyle}" />
                                 <Button x:Name="PART_ClearButton"
                                         BorderThickness="0"
@@ -90,8 +90,8 @@
                                         Background="Transparent"
                                         Margin="{TemplateBinding common:FrameworkElementBaseAttached.IconMargin}"
                                         common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseCircleGeometry}"
-                                        common:FrameworkElementBaseAttached.IconHeight="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight, Converter={toolkit:ValueTranslateToDoubleConverter}, ConverterParameter=0.7}"
-                                        common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth, Converter={toolkit:ValueTranslateToDoubleConverter}, ConverterParameter=0.7}"
+                                        common:FrameworkElementBaseAttached.IconHeight="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.7}"
+                                        common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.7}"
                                         Effect="{x:Null}"
                                         Style="{DynamicResource ButtonTransparentIconStyle}">
                                     <Button.Visibility>
@@ -112,7 +112,7 @@
                         </VisualStateManager.VisualStateGroups>
                     </Border>
                     <ControlTemplate.Triggers>
-                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=(pc:PasswordBoxAssistant.Password), Converter={toolkit:EmptyOrNullToBooleanConverter}}" Value="False">
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=(pc:PasswordBoxAssistant.Password), Converter={pt:EmptyOrNullToBooleanConverter}}" Value="False">
                             <Setter Property="Visibility" Value="Collapsed" TargetName="PART_PlaceHolder" />
                         </DataTrigger>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -120,7 +120,7 @@
                         </Trigger>
                         <Trigger Property="Validation.HasError" Value="True">
                             <Setter Property="BorderBrush" Value="{DynamicResource FieldValidationErrorBrush}" />
-                            <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=BorderThickness.Left, Converter={toolkit:DoubleToThicknessConverter}, ConverterParameter=1.5}" TargetName="RootBorder" />
+                            <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=BorderThickness.Left, Converter={pt:DoubleToThicknessConverter}, ConverterParameter=1.5}" TargetName="RootBorder" />
                         </Trigger>
                         <Trigger Property="IsChecked" Value="True" SourceName="PART_Icon">
                             <Setter Property="pc:PasswordBoxAssistant.IsShowPassword" Value="True" />
