--- a/CookPopularControl/Themes/BaseStyle/ProgressBarBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/ProgressBarBaseStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/ValueConverter.xaml" />
@@ -45,7 +45,7 @@
                                     BorderThickness="{TemplateBinding BorderThickness}"
                                     Background="{TemplateBinding Background}"
                                     CornerRadius="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ProgressBar}, Path=(common:FrameworkElementBaseAttached.CornerRadius)}">
-                                <Grid x:Name="IconGrid" Visibility="{TemplateBinding pc:LinearProgressBarAssistant.IsShowIcon, Converter={toolkit:BooleanToVisibilityConverter}}">
+                                <Grid x:Name="IconGrid" Visibility="{TemplateBinding pc:LinearProgressBarAssistant.IsShowIcon, Converter={pt:BooleanToVisibilityConverter}}">
                                     <Path Width="{TemplateBinding pc:LinearProgressBarAssistant.IconSize}"
                                           Height="{TemplateBinding pc:LinearProgressBarAssistant.IconSize}"
                                           Data="{DynamicResource AirFanGeometry}"
@@ -102,7 +102,7 @@
                                                            SnapsToDevicePixels="True"
                                                            VerticalAlignment="{TemplateBinding VerticalAlignment}"
                                                            RenderTransformOrigin="0.5,0.5"
-                                                           Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ProgressBar}, Path=(pc:LinearProgressBarAssistant.IsShowPercent), Converter={toolkit:BooleanToVisibilityConverter}}">
+                                                           Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ProgressBar}, Path=(pc:LinearProgressBarAssistant.IsShowPercent), Converter={pt:BooleanToVisibilityConverter}}">
                                                     <TextBlock.RenderTransform>
                                                         <TransformGroup>
                                                             <ScaleTransform ScaleX="-1" ScaleY="1" />
@@ -136,7 +136,7 @@
                         <MultiDataTrigger>
                             <MultiDataTrigger.Conditions>
                                 <Condition Binding="{Binding RelativeSource={RelativeSource Self}, Path=(pc:LinearProgressBarAssistant.IsShowIcon)}" Value="True" />
-                                <Condition Binding="{Binding RelativeSource={RelativeSource Self}, Path=Value, Converter={toolkit:ValueBetween0And100ToBooleanConverter}}" Value="True" />
+                                <Condition Binding="{Binding RelativeSource={RelativeSource Self}, Path=Value, Converter={pt:ValueBetween0And100ToBooleanConverter}}" Value="True" />
                             </MultiDataTrigger.Conditions>
                             <Setter Property="Visibility" Value="Visible" TargetName="IconLeaf" />
                             <MultiDataTrigger.EnterActions>
@@ -205,7 +205,7 @@
                                  Stretch="Fill"
                                  Stroke="{DynamicResource UnEnabledBrush}"
                                  StrokeThickness="{TemplateBinding pc:CircularProgressAssistant.ArcThickness}" />
-                        <Grid x:Name="PathGrid" Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:CircularProgressAssistant.ArcThickness), Converter={toolkit:DoubleToThicknessConverter}, ConverterParameter=0.5, Mode=OneWay}">
+                        <Grid x:Name="PathGrid" Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:CircularProgressAssistant.ArcThickness), Converter={pt:DoubleToThicknessConverter}, ConverterParameter=0.5, Mode=OneWay}">
                             <Grid>
                                 <Grid.RenderTransform>
                                     <ScaleTransform x:Name="FullyGridScaleTransform" ScaleX="0" />
@@ -270,7 +270,7 @@
                                     </Path.Data>
                                     <Path.RenderTransform>
                                         <TransformGroup>
-                                            <RotateTransform x:Name="PathProgressRotateTransform" CenterX="{Binding ElementName=PathGrid, Path=ActualWidth, Converter={toolkit:ValueTranslateToDoubleConverter}, ConverterParameter=0.5, Mode=OneWay}" CenterY="{Binding ElementName=PathGrid, Path=ActualHeight, Converter={toolkit:ValueTranslateToDoubleConverter}, ConverterParameter=0.5, Mode=OneWay}" />
+                                            <RotateTransform x:Name="PathProgressRotateTransform" CenterX="{Binding ElementName=PathGrid, Path=ActualWidth, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.5, Mode=OneWay}" CenterY="{Binding ElementName=PathGrid, Path=ActualHeight, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.5, Mode=OneWay}" />
                                         </TransformGroup>
                                     </Path.RenderTransform>
                                 </Path>
@@ -279,7 +279,7 @@
                                        Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Value, StringFormat={}{0:F0}%}"
                                        Foreground="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:LinearProgressBarAssistant.TextColor)}"
                                        HorizontalAlignment="Center" VerticalAlignment="Center"
-                                       Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:LinearProgressBarAssistant.IsShowPercent), Converter={toolkit:BooleanToVisibilityConverter}}" />
+                                       Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:LinearProgressBarAssistant.IsShowPercent), Converter={pt:BooleanToVisibilityConverter}}" />
                         </Grid>
                     </Grid>
                     <ControlTemplate.Triggers>
@@ -349,7 +349,7 @@
                                     <VisualBrush Stretch="None"
                                                  AutoLayoutContent="True" TileMode="Tile" Viewport="0,-1,1,5">
                                         <VisualBrush.Visual>
-                                            <Grid Width="{TemplateBinding Width, Converter={toolkit:ValueTranslateToDoubleConverter}, ConverterParameter=3}" Height="{TemplateBinding Height, Converter={toolkit:ValueTranslateToDoubleConverter}, ConverterParameter=3}">
+                                            <Grid Width="{TemplateBinding Width, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=3}" Height="{TemplateBinding Height, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=3}">
                                                 <Border Background="{TemplateBinding Background}" />
                                                 <Grid x:Name="PART_Wave">
                                                     <Grid.RowDefinitions>
@@ -381,7 +381,7 @@
                         <TextBlock Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Value, StringFormat={}{0:F0}%}"
                                    Foreground="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:LinearProgressBarAssistant.TextColor)}"
                                    HorizontalAlignment="Center" VerticalAlignment="Center"
-                                   Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:LinearProgressBarAssistant.IsShowPercent), Converter={toolkit:BooleanToVisibilityConverter}}" />
+                                   Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:LinearProgressBarAssistant.IsShowPercent), Converter={pt:BooleanToVisibilityConverter}}" />
                     </Grid>
                     <ControlTemplate.Triggers>
                         <EventTrigger RoutedEvent="FrameworkElement.Loaded" SourceName="PART_Ellipse">
