--- a/CookPopularControl/Themes/BaseStyle/DatePickerBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/DatePickerBaseStyle.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <Style x:Key="DatePickerButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="Width" Value="20" />
@@ -103,7 +103,7 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="Validation.HasError" Value="True">
                             <Setter Property="BorderBrush" Value="{DynamicResource FieldValidationErrorBrush}" TargetName="RootBorder" />
-                            <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=BorderThickness, Converter={toolkit:ThicknessToThicknessConverter}, ConverterParameter=1.2}" TargetName="RootBorder" />
+                            <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=BorderThickness, Converter={pt:ThicknessToThicknessConverter}, ConverterParameter=1.2}" TargetName="RootBorder" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
