--- a/CookPopularControl/Themes/BaseStyle/DragableControlsBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/DragableControlsBaseStyle.xaml
@@ -3,7 +3,7 @@
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:drag="clr-namespace:CookPopularControl.Controls.Dragables"
                     xmlns:dragCore="clr-namespace:CookPopularControl.Controls.Dragables.Core"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <Style x:Key="InvisibleThumbStyle" TargetType="{x:Type Thumb}">
         <Setter Property="Background" Value="Transparent" />
@@ -200,8 +200,8 @@
         <Setter Property="Padding" Value="6,2" />
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
         <Setter Property="VerticalContentAlignment" Value="Stretch" />
-        <Setter Property="Canvas.Left" Value="{Binding X, RelativeSource={RelativeSource Self}}" />
-        <Setter Property="Canvas.Top" Value="{Binding Y, RelativeSource={RelativeSource Self}}" />
+        <!--<Setter Property="Canvas.Left" Value="{Binding X, RelativeSource={RelativeSource Self}}" />
+        <Setter Property="Canvas.Top" Value="{Binding Y, RelativeSource={RelativeSource Self}}" />-->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type drag:DragableItem}">
@@ -867,7 +867,7 @@
                         </Border>
                         <Grid x:Name="HeaderContainerGrid" Grid.Row="0" Grid.Column="0"
                               Margin="0,2,2,0"
-                              Visibility="{TemplateBinding IsHeaderPanelVisible, Converter={toolkit:BooleanToVisibilityConverter}}">
+                              Visibility="{TemplateBinding IsHeaderPanelVisible, Converter={pt:BooleanToVisibilityConverter}}">
                             <Grid.Resources>
                                 <Style TargetType="{x:Type Button}" BasedOn="{StaticResource StandardEmbeddedButtonStyle}" />
                             </Grid.Resources>
@@ -906,7 +906,7 @@
                             </drag:DragableItemsControl>
                             <Button x:Name="DefaultAddButton" Grid.Column="2"
                                     Command="{x:Static drag:DragableTabControl.AddItemCommand}"
-                                    Visibility="{TemplateBinding ShowDefaultAddButton, Converter={toolkit:BooleanToVisibilityConverter}}"
+                                    Visibility="{TemplateBinding ShowDefaultAddButton, Converter={pt:BooleanToVisibilityConverter}}"
                                     Style="{StaticResource AddItemCommandButtonStyle}" />
                             <ContentControl x:Name="SuffixContentControl" Grid.Column="3"
                                             Content="{TemplateBinding HeaderSuffixContent}"
@@ -986,7 +986,7 @@
                                         KeyboardNavigation.TabNavigation="Local">
                                     <Grid x:Name="PART_ItemsHolder" />
                                 </Border>
-                                <Grid x:Name="HeaderContainerGrid" Grid.Column="0" Visibility="{TemplateBinding IsHeaderPanelVisible, Converter={toolkit:BooleanToVisibilityConverter}}">
+                                <Grid x:Name="HeaderContainerGrid" Grid.Column="0" Visibility="{TemplateBinding IsHeaderPanelVisible, Converter={pt:BooleanToVisibilityConverter}}">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
@@ -1022,7 +1022,7 @@
                                     <Button x:Name="DefaultAddButton" Grid.Row="2"
                                             common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource PlusGeometry}"
                                             Command="{x:Static drag:DragableTabControl.AddItemCommand}"
-                                            Visibility="{TemplateBinding ShowDefaultAddButton, Converter={toolkit:BooleanToVisibilityConverter}}" />
+                                            Visibility="{TemplateBinding ShowDefaultAddButton, Converter={pt:BooleanToVisibilityConverter}}" />
                                     <ContentControl x:Name="SuffixContentControl" Grid.Row="3"
                                                     Content="{TemplateBinding HeaderSuffixContent}"
                                                     ContentTemplate="{TemplateBinding HeaderSuffixContentStringFormat}"
