--- a/CookPopularControl/Themes/BaseStyle/OtherControlTemplate.xaml
+++ b/CookPopularControl/Themes/BaseStyle/OtherControlTemplate.xaml
@@ -1,29 +1,29 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ControlTemplate x:Key="ColorPickerCircularRing">
         <pc:SimpleGrid x:Name="CustomColorGrid" Background="Transparent">
-            <toolkit:Arc Fill="{DynamicResource RedLinearGradientBrush}"
+            <pt:Arc Fill="{DynamicResource RedLinearGradientBrush}"
                          Stretch="None"
                          ArcThickness="40" EndAngle="51.5" StartAngle="0" />
-            <toolkit:Arc Fill="{DynamicResource OrangeLinearGradientBrush}"
+            <pt:Arc Fill="{DynamicResource OrangeLinearGradientBrush}"
                          Stretch="None"
                          ArcThickness="40" EndAngle="103" StartAngle="51.5" />
-            <toolkit:Arc Fill="{DynamicResource YellowLinearGradientBrush}"
+            <pt:Arc Fill="{DynamicResource YellowLinearGradientBrush}"
                          Stretch="None"
                          ArcThickness="40" EndAngle="154.5" StartAngle="103" />
-            <toolkit:Arc Fill="{DynamicResource GreenLinearGradientBrush}"
+            <pt:Arc Fill="{DynamicResource GreenLinearGradientBrush}"
                          Stretch="None"
                          ArcThickness="40" EndAngle="206" StartAngle="154.5" />
-            <toolkit:Arc Fill="{DynamicResource CyanLinearGradientBrush}"
+            <pt:Arc Fill="{DynamicResource CyanLinearGradientBrush}"
                          Stretch="None"
                          ArcThickness="40" EndAngle="257.5" StartAngle="206" />
-            <toolkit:Arc Fill="{DynamicResource BlueLinearGradientBrush}"
+            <pt:Arc Fill="{DynamicResource BlueLinearGradientBrush}"
                          Stretch="None"
                          ArcThickness="40" EndAngle="309" StartAngle="257.5" />
-            <toolkit:Arc Fill="{DynamicResource PurpleLinearGradientBrush}"
+            <pt:Arc Fill="{DynamicResource PurpleLinearGradientBrush}"
                          Stretch="None"
                          ArcThickness="40" EndAngle="360" StartAngle="309" />
         </pc:SimpleGrid>
