--- a/CookPopularControl/Themes/BaseStyle/Others/DropZoneStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/Others/DropZoneStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:data="clr-namespace:CookPopularControl.Communal.Data"
                     xmlns:drag="clr-namespace:CookPopularControl.Controls.Dragables"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <Style x:Key="DefaultDropZoneStyle" TargetType="{x:Type drag:DropZone}">
         <Setter Property="Opacity" Value="0.25" />
@@ -10,7 +10,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type drag:DropZone}">
                     <Grid>
-                        <Path Fill="{TemplateBinding Foreground}" Visibility="{TemplateBinding Location, Converter={toolkit:EqualityToVisibilityConverter}, ConverterParameter={x:Static data:DropZoneLocation.Top}}">
+                        <Path Fill="{TemplateBinding Foreground}" Visibility="{TemplateBinding Location, Converter={pt:EqualityToVisibilityConverter}, ConverterParameter={x:Static data:DropZoneLocation.Top}}">
                             <Path.Data>
                                 <PathGeometry>
                                     <PathFigure x:Name="PathFigure" StartPoint="160, 0">
@@ -19,7 +19,7 @@
                                 </PathGeometry>
                             </Path.Data>
                         </Path>
-                        <Path Fill="{TemplateBinding Foreground}" Visibility="{TemplateBinding Location, Converter={toolkit:EqualityToVisibilityConverter}, ConverterParameter={x:Static data:DropZoneLocation.Right}}">
+                        <Path Fill="{TemplateBinding Foreground}" Visibility="{TemplateBinding Location, Converter={pt:EqualityToVisibilityConverter}, ConverterParameter={x:Static data:DropZoneLocation.Right}}">
                             <Path.Data>
                                 <PathGeometry>
                                     <PathFigure StartPoint="60, 160">
@@ -28,7 +28,7 @@
                                 </PathGeometry>
                             </Path.Data>
                         </Path>
-                        <Path Fill="{TemplateBinding Foreground}" Visibility="{TemplateBinding Location, Converter={toolkit:EqualityToVisibilityConverter}, ConverterParameter={x:Static data:DropZoneLocation.Bottom}}">
+                        <Path Fill="{TemplateBinding Foreground}" Visibility="{TemplateBinding Location, Converter={pt:EqualityToVisibilityConverter}, ConverterParameter={x:Static data:DropZoneLocation.Bottom}}">
                             <Path.Data>
                                 <PathGeometry>
                                     <PathFigure StartPoint="0, 60">
@@ -37,7 +37,7 @@
                                 </PathGeometry>
                             </Path.Data>
                         </Path>
-                        <Path Fill="{TemplateBinding Foreground}" Visibility="{TemplateBinding Location, Converter={toolkit:EqualityToVisibilityConverter}, ConverterParameter={x:Static data:DropZoneLocation.Left}}">
+                        <Path Fill="{TemplateBinding Foreground}" Visibility="{TemplateBinding Location, Converter={pt:EqualityToVisibilityConverter}, ConverterParameter={x:Static data:DropZoneLocation.Left}}">
                             <Path.Data>
                                 <PathGeometry>
                                     <PathFigure StartPoint="0, 0">
@@ -48,7 +48,7 @@
                         </Path>
                         <Ellipse Width="120" Height="120"
                                  Fill="{TemplateBinding Foreground}"
-                                 Visibility="{TemplateBinding Location, Converter={toolkit:EqualityToVisibilityConverter}, ConverterParameter={x:Static data:DropZoneLocation.Floating}}" />
+                                 Visibility="{TemplateBinding Location, Converter={pt:EqualityToVisibilityConverter}, ConverterParameter={x:Static data:DropZoneLocation.Floating}}" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
