--- a/CookPopularControl/Themes/BaseStyle/TimePickerBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/TimePickerBaseStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <Style x:Key="ClockRadioButtonStyle" TargetType="{x:Type RadioButton}">
         <Setter Property="Width" Value="30" />
@@ -93,7 +93,7 @@
                                         Content="确定"
                                         common:FrameworkElementBaseAttached.CornerRadius="15"
                                         Command="{x:Static pc:Clock.ConfirmCommand}"
-                                        Visibility="{TemplateBinding pc:ClockAssistant.IsAddConfirmButton, Converter={toolkit:BooleanToVisibilityConverter}}" />
+                                        Visibility="{TemplateBinding pc:ClockAssistant.IsAddConfirmButton, Converter={pt:BooleanToVisibilityConverter}}" />
                             </UniformGrid>
                         </Grid>
                     </Border>
