--- a/CookPopularControl/Themes/LabelStyle.xaml
+++ b/CookPopularControl/Themes/LabelStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <Style x:Key="DefaultLabelStyle" TargetType="{x:Type Label}">
         <Setter Property="Height" Value="{DynamicResource DefaultControlHeight}" />
@@ -91,7 +91,7 @@
                                     common:FrameworkElementBaseAttached.IconHeight="15"
                                     common:FrameworkElementBaseAttached.IconWidth="15"
                                     Command="{x:Static pc:GroupLabel.CloseCommand}"
-                                    Visibility="{Binding RelativeSource={RelativeSource AncestorType=pc:GroupLabel}, Path=HasCloseButton, Converter={toolkit:BooleanToVisibilityConverter}}"
+                                    Visibility="{Binding RelativeSource={RelativeSource AncestorType=pc:GroupLabel}, Path=HasCloseButton, Converter={pt:BooleanToVisibilityConverter}}"
                                     Style="{DynamicResource ButtonTransparentIconStyle}" />
                         </StackPanel>
                     </Border>
