--- a/CookPopularControl/Themes/MenuStyle.xaml
+++ b/CookPopularControl/Themes/MenuStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ContextMenu x:Key="DefaultContextMenu">
         <MenuItem Command="Cut">
@@ -167,7 +167,7 @@
                                                    Margin="16,0,0,0"
                                                    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                                                    HorizontalAlignment="Right" VerticalAlignment="Center"
-                                                   Visibility="{TemplateBinding InputGestureText, Converter={toolkit:NullOrEmptyToVisibilityConverter}}" />
+                                                   Visibility="{TemplateBinding InputGestureText, Converter={pt:NullOrEmptyToVisibilityConverter}}" />
                                     </Grid>
                                     <Grid x:Name="SubBlock" Grid.Column="2"
                                           Margin="16,0,0,0"
