--- a/CookPopularControl/Themes/NotifyStyle.xaml
+++ b/CookPopularControl/Themes/NotifyStyle.xaml
@@ -28,7 +28,7 @@
     </ContextMenu>
 
     <Style x:Key="BubbleMessageStyle" TargetType="{x:Type pc:BubbleMessage}">
-        <Setter Property="Width" Value="300" />
+        <Setter Property="MinWidth" Value="200" />
         <Setter Property="MinHeight" Value="60" />
         <Setter Property="BorderBrush" Value="Transparent" />
         <Setter Property="BorderThickness" Value="0" />
