--- a/CookPopularControl/Themes/RadioButtonStyle.xaml
+++ b/CookPopularControl/Themes/RadioButtonStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <Style x:Key="DefaultRadioButtonStyle" TargetType="{x:Type RadioButton}">
         <Setter Property="BorderBrush" Value="{DynamicResource PrimaryThemeBrush}" />
@@ -27,8 +27,8 @@
                                          Stroke="{TemplateBinding BorderBrush}"
                                          StrokeThickness="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=BorderThickness.Left}" />
                                 <Ellipse x:Name="FillCircle"
-                                         Width="{TemplateBinding pc:RadioButtonAssistant.CircleDiameter, Converter={toolkit:ValueTranslateToDoubleConverter}, ConverterParameter=0.5}"
-                                         Height="{TemplateBinding pc:RadioButtonAssistant.CircleDiameter, Converter={toolkit:ValueTranslateToDoubleConverter}, ConverterParameter=0.5}"
+                                         Width="{TemplateBinding pc:RadioButtonAssistant.CircleDiameter, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.5}"
+                                         Height="{TemplateBinding pc:RadioButtonAssistant.CircleDiameter, Converter={pt:ValueTranslateToDoubleConverter}, ConverterParameter=0.5}"
                                          Fill="{TemplateBinding pc:RadioButtonAssistant.CheckedBrush}"
                                          Visibility="Collapsed" />
                             </pc:SimpleGrid>
