--- a/CookPopularControl/Themes/ScrollBarStyle.xaml
+++ b/CookPopularControl/Themes/ScrollBarStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ControlsBaseStyle.xaml" />
@@ -92,7 +92,7 @@
                           Content="M 4 0 L 4 8 L 0 4 Z"
                           Command="{x:Static ScrollBar.LineLeftCommand}"
                           IsEnabled="{TemplateBinding IsMouseOver}"
-                          Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsScrollBarRepeatButton), Converter={toolkit:BooleanToVisibilityConverter}}"
+                          Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsScrollBarRepeatButton), Converter={pt:BooleanToVisibilityConverter}}"
                           Style="{StaticResource ScrollBarLineButton}" />
             <Border Grid.Column="1"
                     BorderBrush="{TemplateBinding BorderBrush}"
@@ -116,7 +116,7 @@
                           Content="M 0 0 L 4 4 L 0 8 Z"
                           Command="{x:Static ScrollBar.LineRightCommand}"
                           IsEnabled="{TemplateBinding IsMouseOver}"
-                          Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsScrollBarRepeatButton), Converter={toolkit:BooleanToVisibilityConverter}}"
+                          Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsScrollBarRepeatButton), Converter={pt:BooleanToVisibilityConverter}}"
                           Style="{StaticResource ScrollBarLineButton}" />
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="CommonStates">
@@ -147,7 +147,7 @@
                           Content="M 0 4 L 8 4 L 4 0 Z"
                           Command="{x:Static ScrollBar.LineUpCommand}"
                           IsEnabled="{TemplateBinding IsMouseOver}"
-                          Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsScrollBarRepeatButton), Converter={toolkit:BooleanToVisibilityConverter}}"
+                          Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsScrollBarRepeatButton), Converter={pt:BooleanToVisibilityConverter}}"
                           Style="{StaticResource ScrollBarLineButton}" />
             <Border Grid.Row="1"
                     BorderBrush="{TemplateBinding BorderBrush}"
@@ -171,7 +171,7 @@
                           Content="M 0 0 L 4 4 L 8 0 Z"
                           Command="{x:Static ScrollBar.LineDownCommand}"
                           IsEnabled="{TemplateBinding IsMouseOver}"
-                          Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsScrollBarRepeatButton), Converter={toolkit:BooleanToVisibilityConverter}}"
+                          Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.IsScrollBarRepeatButton), Converter={pt:BooleanToVisibilityConverter}}"
                           Style="{StaticResource ScrollBarLineButton}" />
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="CommonStates">
