--- a/CookPopularControl/Themes/ScrollViewerStyle.xaml
+++ b/CookPopularControl/Themes/ScrollViewerStyle.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <Style x:Key="DefaultScrollViewerStyle" TargetType="{x:Type ScrollViewer}">
         <Setter Property="Foreground" Value="{DynamicResource PrimaryThemeBrush}" />
@@ -52,13 +52,13 @@
                         <Rectangle x:Name="PART_Corner" Grid.Row="1" Grid.Column="1"
                                    Fill="{TemplateBinding Foreground}"
                                    Opacity="0.8"
-                                   Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollViewerAssistant.IsCornerShow), Converter={toolkit:BooleanToVisibilityConverter}}" />
+                                   Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollViewerAssistant.IsCornerShow), Converter={pt:BooleanToVisibilityConverter}}" />
                     </Grid>
                     <ControlTemplate.Triggers>
-                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:ScrollBarAssistant.VerticalScrollBarWidth), Converter={toolkit:ValueMoreThanTargetValueToBooleanConverter}, ConverterParameter=0}" Value="True">
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:ScrollBarAssistant.VerticalScrollBarWidth), Converter={pt:ValueMoreThanTargetValueToBooleanConverter}, ConverterParameter=0}" Value="True">
                             <Setter Property="Width" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.VerticalScrollBarWidth)}" TargetName="col" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:ScrollBarAssistant.HorizontalScrollBarHeight), Converter={toolkit:ValueMoreThanTargetValueToBooleanConverter}, ConverterParameter=0}" Value="True">
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(pc:ScrollBarAssistant.HorizontalScrollBarHeight), Converter={pt:ValueMoreThanTargetValueToBooleanConverter}, ConverterParameter=0}" Value="True">
                             <Setter Property="Height" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(pc:ScrollBarAssistant.HorizontalScrollBarHeight)}" TargetName="row" />
                         </DataTrigger>
 
