--- a/CookPopularControl/Themes/SwiperStyle.xaml
+++ b/CookPopularControl/Themes/SwiperStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <Style x:Key="DefaultSwiperStyle" TargetType="{x:Type pc:Swiper}">
         <Setter Property="Foreground" Value="{DynamicResource PrimaryThemeBrush}" />
@@ -40,7 +40,7 @@
                         <StackPanel x:Name="PART_Panel"
                                     HorizontalAlignment="Center" VerticalAlignment="Bottom"
                                     Orientation="Horizontal"
-                                    Visibility="{TemplateBinding IsShowIndicatorDots, Converter={toolkit:BooleanToVisibilityConverter}}" />
+                                    Visibility="{TemplateBinding IsShowIndicatorDots, Converter={pt:BooleanToVisibilityConverter}}" />
                     </pc:SimpleGrid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsEnabled" Value="False" SourceName="PART_LastView">
