--- a/CookPopularControl/Themes/ToolBarStyle.xaml
+++ b/CookPopularControl/Themes/ToolBarStyle.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml">
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/CheckBoxStyle.xaml" />
@@ -159,7 +159,7 @@
                                           ClickMode="Press"
                                           FocusVisualStyle="{x:Null}"
                                           IsChecked="{Binding IsOverflowOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
-                                          Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=HasOverflowItems, Converter={toolkit:BooleanToVisibilityConverter}}"
+                                          Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=HasOverflowItems, Converter={pt:BooleanToVisibilityConverter}}"
                                           Style="{StaticResource ToolBarHorizontalOverflowToggleButtonStyle}" />
                             <Popup x:Name="OverflowPopup"
                                    Margin="1" Focusable="false"
