--- a/MvvmTestDemo/MainWindow.xaml
+++ b/MvvmTestDemo/MainWindow.xaml
@@ -93,8 +93,7 @@
             </ListBox>
             <ContentControl Grid.Column="1" Content="{Binding ControlContent}" />
         </Grid>
-        <view:FieldsDemo Visibility="Visible" />
-        <!--<useCtl:OverViewDemo Visibility="Visible" />-->
+        <view:DragableControlsDemo Visibility="Visible" />
 
         <!--  接收BubbleMessage的容器  -->
         <ScrollViewer Margin="0,10,10,10"
